<resources>
    <string name="app_name">ObservationApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="client_name">Client name</string>
    <string name="project_name">Project name</string>
    <string name="structure_name">Structure name</string>
    <string name="stage_floor">Stage/Floor</string>
    <string name="trade_group">Trade Group</string>
    <string name="activity">Activity</string>
    <string name="activity_trade">Activity/Trade</string>
    <string name="new_observation">New Observation</string>
    <string name="history">History</string>
    <string name="goodwork">Good Work</string>
    <string name="reports">Reports</string>
    <string name="add_photo">Add Photo</string>
    <string name="cement_Store_is_dryandleakproof">Cement Store is dry and leak proof</string>
    <string name="choose_from_gallary">Choose From Gallary</string>
    <string name="age_of_Cement_used_at_site_as_specified">Age of Cement used at site as specified</string>
    <string name="height_of_Stack_not_exceeding_limits">Height of Stack not exceeding limits</string>
    <string name="cement_Bags_arenot_directly_resting_on_ground">Cement Bags are not directly resting on ground</string>
    <string name="fifo_system_implement_FirstInFirstOut">FIFO system implement(First In First Out)</string>
    <string name="adequate_space_available_around_between_stacksandexteriorwallas">Adequate space available around/between stacks and exterior walla</string>
    <string name="view">View</string>
    <string name="material_name_cement">Material Name:Cement</string>
    <string name="material_name_reinforced_concrete">Material Name:Reinforced Concrete</string>
    <string name="material_names_teel">Material Name:Steel</string>
    <string name="material_name_sand">Material Name:Sand</string>
    <string name="material_name_surfaceFinishing">Material Name:SurfaceFinishing</string>
    <string name="selected_group">Selected Group</string>
    <string name="selected_heading">Selected Heading</string>
    <string name="question_name">Question Name</string>
    <string name="conformity">Conformity</string>
    <string name="low"> Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="na">N/A</string>
    <string name="save">Save</string>
    <string name="capture_image">Capture Image</string>
    <string name="cancel">Cancel</string>
    <string name="add_material">Add Material</string>
    <string name="gallary">Gallary</string>
    <string name="login">Login</string>
    <string name="take_photo">Take Photo</string>
    <string name="camera">Camera</string>
    <string name="project">Project</string>
    <string name="material">Material</string>
    <string name="unit_of_measure">Value</string>
    <string name="select_UOM">Select UOM</string>
    <string name="hint_enter_sub_location">Enter sub location</string>
    <string name="allowed_char_for_edit">abcdefghijklmnopqrstuvwxyz0123456789 ABCDEFGHIJKLMNOPQRSTUVWXYZ.,!@%()?_-+="':;/&amp;)</string>
    <string name="question_answer">Question &amp; Answer</string>
    <string name="quantity">Quantity</string>
    <string name="unitprice">UnitPrice</string>
    <string name="accountable">Accountable</string>
    <string name="status">Status</string>
    <string name="close_by">Close by</string>
    <string name="observation_severity">Observation Severity</string>
    <string name="reference">Reference</string>
    <string name="remark">Remark</string>
    <string name="description">Description</string>
    <string name="observation_type">Observation type</string>
    <string name="add_observation">Add Observation</string>
    <string name="loading_data">Loading Data…</string>
    <string name="something_is_wrong">Something is wrong</string>
    <string name="logout">Logout</string>
    <string name="refresh_project_data">Refresh project data</string>
    <string name="feature_is_coming_soon">Feature is coming soon…</string>
    <string name="no_data_available">No Data available</string>
    <string name="observation_history">Observation History</string>
    <string name="observation">Observation</string>
    <string name="label_brush">Brush</string>
    <string name="label_text">Text</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_arrow">Arrow</string>
    <string name="label_oval">Oval</string>
    <string name="view_photo">View Photo</string>
    <string name="view_images">View Images</string>
    <string name="s_is_empty">%s is empty</string>
    <string name="no_images_are_selected">No images are selected</string>
    <string name="target_date">Target Date</string>
    <string name="select_target_date">Select target date</string>
    <string name="location">Location</string>
    <string name="observation_category">Observation category</string>
    <string name="shape">Shape</string>
    <string name="opacity">Opacity</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="rotate">Rotate</string>
    <string name="ok">OK</string>
    <string name="date">Date</string>
    <string name="request_permission">Request Permission!</string>
    <string name="permission_is_required_to_function_properly">%s permission is required to function properly.</string>
    <string name="saving">Saving…</string>
    <string name="storage">Storage</string>
    <string name="this_permission_is_required_to_pick_a_image_from_storage">This permission is required to pick a image from storage.</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="save_image">Save Image</string>
    <string name="discard">Discard</string>
    <string name="update">Update</string>
    <string name="observation_number">Observation number</string>
</resources>