<?xml version="1.0" encoding="utf-8"?>
    <layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".FragmentQuestionsAnswers">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/questionsAnsToolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:background="@color/md_theme_secondaryContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <TextView
                    android:id="@+id/tool_bar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_answer"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textSize="@dimen/dimen_20dp"
                    android:padding="@dimen/dimen_4dp"
                    android:textStyle="bold"/>

            </androidx.appcompat.widget.Toolbar>
            <TextView
                android:id="@+id/txtProjectName"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"


                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionsAnsToolbar"

                tools:text="@string/project_name" />

            <TextView
                android:id="@+id/tvGroupName"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"

                android:textAppearance="@style/TextAppearance.AppCompat.Body1"

                app:layout_constraintEnd_toEndOf="@+id/txtProjectName"
                app:layout_constraintStart_toStartOf="@+id/txtProjectName"
                app:layout_constraintTop_toBottomOf="@+id/txtProjectName"
                tools:text="@string/SelectedGroup" />

            <TextView
                android:id="@+id/tvHeadingName"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="@+id/txtProjectName"
                app:layout_constraintStart_toStartOf="@+id/txtProjectName"
                app:layout_constraintTop_toBottomOf="@+id/tvGroupName"
                tools:text="@string/SelectedHeading" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                app:layout_constraintEnd_toEndOf="@+id/txtProjectName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtProjectName"
                app:layout_constraintTop_toBottomOf="@+id/tvHeadingName">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvQuestionName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dimen_15dp"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        app:drawableRightCompat="@drawable/ic_info"
                        tools:text="@string/QuestionName" />
                    <RadioGroup
                        android:id="@+id/llQuestionType1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/btnconformity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:onClick="checkButton"
                            android:text="@string/conformity" />
                        <RadioButton
                            android:id="@+id/btnlow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:onClick="checkButton"
                            android:text="@string/low" />
                        <RadioButton
                            android:id="@+id/btnmedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:onClick="checkButton"
                            android:text="@string/medium" />
                        <RadioButton
                            android:id="@+id/btnhigh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:onClick="checkButton"
                            android:text="@string/high" />
                        <RadioButton
                            android:id="@+id/btnNA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:onClick="checkButton"
                            android:text="@string/na" />



                    </RadioGroup>

                <LinearLayout
                    android:id="@+id/llQuestionType3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">




                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilUnitOfMeasure"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/unit_of_measure"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiedUnitOfMeasure"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="@string/allowed_char_for_edit_unit_of_measure"
                            android:inputType="textMultiLine" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/spProjectName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:layout_marginTop="@dimen/dimen_10dp">

                        <AutoCompleteTextView
                            android:id="@+id/autoCompleteProjectName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/select_UOM"
                           />
                    </com.google.android.material.textfield.TextInputLayout>



                </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilRemark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/remark"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiedRemark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="@string/allowed_char_for_edit"
                            android:inputType="textMultiLine" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilSubLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:hint="@string/hint_enter_sub_location"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tieSubLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="@string/allowed_char_for_edit"
                            android:inputType="textMultiLine" />
                    </com.google.android.material.textfield.TextInputLayout>





                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:backgroundTint="@color/md_theme_secondary"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fabCaptureImage"
                app:srcCompat="@drawable/ic_check" />

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:text="@string/save"
                app:layout_constraintBottom_toTopOf="@+id/fabSave"
                app:layout_constraintEnd_toEndOf="@+id/fabSave"
                app:layout_constraintStart_toStartOf="@+id/fabSave" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabCaptureImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_35dp"
               android:layout_marginTop="@dimen/dimen_40dp"
                android:backgroundTint="@color/md_theme_secondary"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fabSave"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fabCancel"
                app:srcCompat="@drawable/ic_camera" />

            <!--Action name text for the add person button-->
            <!--Make sure that you are constraining this Text
                 to the add Person FAB button-->
            <TextView
                android:id="@+id/tvCaptureImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:text="@string/CaptureImage"
                app:layout_constraintBottom_toTopOf="@+id/fabCaptureImage"
                app:layout_constraintEnd_toEndOf="@+id/fabCaptureImage"
                app:layout_constraintStart_toStartOf="@+id/fabCaptureImage" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_35dp"
               android:layout_marginTop="@dimen/dimen_40dp"
                android:backgroundTint="@color/md_theme_secondary"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fabCaptureImage"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_cancel" />

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toTopOf="@+id/fabCaptureImage"
                app:layout_constraintEnd_toEndOf="@+id/fabCancel"
                app:layout_constraintStart_toStartOf="@+id/fabCancel" />









        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</layout>
